trying a fix on ios device

--- a/css/productDetail.css
+++ b/css/productDetail.css
@@ -27,6 +27,7 @@ img {
 }
 .img-showcase img {
   min-width: 100%;
+  height: 100%;
 }
 .img-select {
   display: flex;
